--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   provider: ^6.1.2
   sqflite: ^2.4.1
   path_provider: ^2.1.5
+  path: ^1.9.0
+  image_picker: ^1.1.2
+  google_fonts: ^6.2.1
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
